--- a/WebContent/view/helloPanel.view.xml
+++ b/WebContent/view/helloPanel.view.xml
@@ -8,6 +8,10 @@
 		width="auto" >
 		<content>
 			<Button
+		        text="{i18n>openDialogButtonText}"
+		        press="onOpenDialog"
+		        class="sapUiSmallMarginEnd"/>
+			<Button
 				text="{i18n>showHelloButtonText}"
 				press="onGoToPage2_pressed"
 				class="myAppDemoWT myCustomButton"/>
