--- a/WebContent/view/app.view.xml
+++ b/WebContent/view/app.view.xml
@@ -8,13 +8,14 @@
 	<App class="sapUiDemoWT" id="app">
 		<pages>
 			<Page title="{i18n>homePageTitle}">
-				<content>
+				<headerContent>
 					<Button
-						text="{i18n>showHelloButtonText}"
-						press="onShowHello"
-						class="myAppDemoWT myCustomButton"/>
+						icon="sap-icon://hello-world"
+						press="onOpenDialog"/>
+				</headerContent>
+				<content>
 					<mvc:XMLView viewName="view.helloPanel"/>
-					<mvc:JSView viewName="view.mainView"/>
+<!-- 					<mvc:JSView viewName="view.mainView"/> -->
 				</content>
 			</Page>
 		</pages>
