Completed: - Aggregation Binding - Data Types - Expression Binding - Custom Formatters

--- a/WebContent/view/app.view.xml
+++ b/WebContent/view/app.view.xml
@@ -16,6 +16,7 @@
 				<content>
 					<mvc:XMLView viewName="view.helloPanel"/>
 <!-- 					<mvc:JSView viewName="view.mainView"/> -->
+					<mvc:XMLView viewName="view.invoiceList"/>
 				</content>
 			</Page>
 		</pages>
